--- a/.gitignore
+++ b/.gitignore
@@ -88,4 +88,7 @@ fastlane/test_output
 !*.xcworkspace/contents.xcworkspacedata
 /*.gcno
 
+# Pods
+Pods
+
 # End of https://www.gitignore.io/api/swift,xcode
