Add Login With Google

--- a/Scoops/Resources/Info.plist
+++ b/Scoops/Resources/Info.plist
@@ -45,5 +45,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.212537274787-i29a149acf0jm6tbdr7l91tfcshie21c</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
